--- a/package.json
+++ b/package.json
@@ -1,5 +1,14 @@
 {
   "name": "snowbot",
   "private": true,
-  "dependencies": {}
+  "dependencies": {
+    "@rails/webpacker": "^3.0.2",
+    "bootstrap": "3",
+    "coffeescript": "1.12.7",
+    "gmaps": "^0.4.24",
+    "jquery": "^3.2.1"
+  },
+  "devDependencies": {
+    "webpack-dev-server": "^2.9.7"
+  }
 }
