--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "bootstrap": "3",
     "coffeescript": "1.12.7",
     "gmaps": "^0.4.24",
-    "jquery": "^3.2.1"
+    "jquery": "^3.2.1",
+    "typed.js": "^2.0.6"
   },
   "devDependencies": {
     "webpack-dev-server": "^2.9.7"
