--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "private": true,
   "dependencies": {
     "@rails/webpacker": "^3.0.2",
-    "bootstrap": "3",
+    "bootstrap": ">=3.4.1",
     "coffeescript": "1.12.7",
     "flatpickr": "^4.1.4",
     "gmaps": "^0.4.24",
@@ -11,6 +11,6 @@
     "typed.js": "^2.0.6"
   },
   "devDependencies": {
-    "webpack-dev-server": "^2.9.7"
+    "webpack-dev-server": ">=3.1.11"
   }
 }
